# voice_detection

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
include/: VoiceDetection.h  VoiceDetectionPriv.h
keyword_detection/: KeywordDetection.cpp  KeywordDetection.h  Makefile.am  Makefile.in
keyword_detection/kwd/: Makefile.am  Makefile.in
keyword_detection/kwd/include/: kwd_function.h
keyword_detection/kwd/src/: Makefile.in
voice_activity_detection/: Makefile.am  Makefile.in  VoiceActivityDetection.cpp  VoiceActivityDetection.h
voice_activity_detection/vad/: Makefile.am  Makefile.in
voice_activity_detection/vad/include/: vad_function.h
voice_activity_detection/vad/src/: Makefile.in
